compiler/toc_hir_lowering/src/snapshots/toc_hir_lowering__test__lower_char_seq_escapes-35.snap
---
source: compiler/toc_hir_lowering/src/test.rs
expression: "a := \"\\U8O\""

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..11): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..11): []
        Assign@(FileId(1), 0..11): None
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..11): String("\u{8}O")

